tests/machine/x/fs/string_contains.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/string_contains.fs(5,17): error FS0039: The field, constructor or member 'contains' is not defined

/workspace/mochi/tests/machine/x/fs/string_contains.fs(6,17): error FS0039: The field, constructor or member 'contains' is not defined
