tests/machine/x/fs/string_contains.fs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T16:28:28Z
open System

let s: string = "catch"
printfn "%s" (s.contains("cat"))
printfn "%s" (s.contains("dog"))
